--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,173 @@
+:root {
+    --main-green-light: rgb(0, 250, 0);
+    --main-gray-light: rgb(235, 235, 235);
+    --main-color-light: rgb(255, 255, 255);
+    --top-box-shadow: 0px 1px 10px rgb(128 128 128);
+    --bottom-box-shadow: 0px -1px 10px rgb(128 128 128);
+}
+
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
+
+/* The Main View Of The Web App */
+.main {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
+/* The Top Bar Of The Main View */
+.top-bar {
+    width: 100vw;
+    height: 10vh;
+    display: grid;
+    flex: 1 1 1fr;
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    box-shadow: var(--top-box-shadow);
+    z-index: 0;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+}
+
+.search-input {
+    width: 100%;
+}
+
+.search-input > input {
+    width: 90%;
+    height: 3vh;
+    border-radius: 3vh;
+    padding: 0;
+    padding-left: 3vh;
+}
+
+input:focus-visible {
+    outline: none;
+}
+
+button:focus-visible {
+    outline: none;
+}
+
+.my-profile-button {
+    grid-column: 1 / 4;
+    width: 100%;
+    height: 100%;
+    background: white;
+    border: none;
+    padding: 0;
+}
+
+/* The View For The Contacts */
+.main-view {
+    width: 100vw;
+    display: flex;
+    flex: 1 1 80vh;
+    flex-direction: column;
+    gap: 20px;
+    background: var(--main-gray-light);
+}
+
+.main-view-dail {
+    flex-basis: 40vh;
+}
+
+.new-contact-button {
+    width: 100vw;
+    height: 70px;
+    border: none;
+    border-radius: 20px;
+}
+
+.dail-pad {
+    position: absolute;
+    bottom: 11.5vh;
+    left: 1.5vh;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--main-green-light);
+    box-shadow: var(--bottom-box-shadow);
+}
+
+/* The Dial Style */
+.dail {
+    height: 0vh;
+    position: relative;
+    top: 100vh;
+    width: 100%;
+    display: none;
+}
+
+.dail-up {
+    height: 40vh;
+    position: static;
+    display: flex;
+    flex: 1 1 40vh;
+    flex-direction: column;
+}
+
+.dail-value {
+    height: 7.5vh;
+}
+
+.dail-buttons {
+    width: 100%;
+    height: 32.5vh;
+    display: grid;
+    gap: 5px;
+    align-content: space-around;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+}
+
+.dail-button {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-gray-light);
+}
+
+.dail-down {
+    grid-column: 2;
+}
+
+/* The Bottom Bar Of The Main View */
+.bottom-bar {
+    width: 100vw;
+    height: 10vh;
+    display: flex;
+    flex: 1 1 1fr;
+    box-shadow: var(--bottom-box-shadow);
+    z-index: 0;
+    align-items: center;
+}
+
+.bottom-bar > div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 
 
@@ -19,49 +185,49 @@ body {
     src: url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.ttf") format("truetype"); }
 
 @font-face {
-  font-family: 'Font Awesome 6 Free';
-  font-style: normal;
-  font-weight: 900;
-  font-display: block;
-  src: url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.ttf") format("truetype"); }
+    font-family: 'Font Awesome 6 Free';
+    font-style: normal;
+    font-weight: 900;
+    font-display: block;
+    src: url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.ttf") format("truetype"); }
 
 @font-face {
-  font-family: "Font Awesome 5 Free";
-  font-display: block;
-  font-weight: 900;
-  src: url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.ttf") format("truetype"); }
-
-  @font-face {
-  font-family: "Font Awesome 5 Free";
-  font-display: block;
-  font-weight: 400;
-  src: url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.ttf") format("truetype"); }
+    font-family: "Font Awesome 5 Free";
+    font-display: block;
+    font-weight: 900;
+    src: url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.ttf") format("truetype"); }
 
 @font-face {
-  font-family: "FontAwesome";
-  font-display: block;
-  src: url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.ttf") format("truetype"); }
+    font-family: "Font Awesome 5 Free";
+    font-display: block;
+    font-weight: 400;
+    src: url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.ttf") format("truetype"); }
 
 @font-face {
-  font-family: "FontAwesome";
-  font-display: block;
-  src: url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.ttf") format("truetype");
-  unicode-range: U+F003,U+F006,U+F014,U+F016-F017,U+F01A-F01B,U+F01D,U+F022,U+F03E,U+F044,U+F046,U+F05C-F05D,U+F06E,U+F070,U+F087-F088,U+F08A,U+F094,U+F096-F097,U+F09D,U+F0A0,U+F0A2,U+F0A4-F0A7,U+F0C5,U+F0C7,U+F0E5-F0E6,U+F0EB,U+F0F6-F0F8,U+F10C,U+F114-F115,U+F118-F11A,U+F11C-F11D,U+F133,U+F147,U+F14E,U+F150-F152,U+F185-F186,U+F18E,U+F190-F192,U+F196,U+F1C1-F1C9,U+F1D9,U+F1DB,U+F1E3,U+F1EA,U+F1F7,U+F1F9,U+F20A,U+F247-F248,U+F24A,U+F24D,U+F255-F25B,U+F25D,U+F271-F274,U+F278,U+F27B,U+F28C,U+F28E,U+F29C,U+F2B5,U+F2B7,U+F2BA,U+F2BC,U+F2BE,U+F2C0-F2C1,U+F2C3,U+F2D0,U+F2D2,U+F2D4,U+F2DC; }
+    font-family: "FontAwesome";
+    font-display: block;
+    src: url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.ttf") format("truetype"); }
 
 @font-face {
-  font-family: "FontAwesome";
-  font-display: block;
-  src: url("../webfonts/fa-v4compatibility.woff2") format("woff2"), url("../webfonts/fa-v4compatibility.ttf") format("truetype");
-  unicode-range: U+F041,U+F047,U+F065-F066,U+F07D-F07E,U+F080,U+F08B,U+F08E,U+F090,U+F09A,U+F0AC,U+F0AE,U+F0B2,U+F0D0,U+F0D6,U+F0E4,U+F0EC,U+F10A-F10B,U+F123,U+F13E,U+F148-F149,U+F14C,U+F156,U+F15E,U+F160-F161,U+F163,U+F175-F178,U+F195,U+F1F8,U+F219,U+F250,U+F252,U+F27A; }
+    font-family: "FontAwesome";
+    font-display: block;
+    src: url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.ttf") format("truetype");
+    unicode-range: U+F003,U+F006,U+F014,U+F016-F017,U+F01A-F01B,U+F01D,U+F022,U+F03E,U+F044,U+F046,U+F05C-F05D,U+F06E,U+F070,U+F087-F088,U+F08A,U+F094,U+F096-F097,U+F09D,U+F0A0,U+F0A2,U+F0A4-F0A7,U+F0C5,U+F0C7,U+F0E5-F0E6,U+F0EB,U+F0F6-F0F8,U+F10C,U+F114-F115,U+F118-F11A,U+F11C-F11D,U+F133,U+F147,U+F14E,U+F150-F152,U+F185-F186,U+F18E,U+F190-F192,U+F196,U+F1C1-F1C9,U+F1D9,U+F1DB,U+F1E3,U+F1EA,U+F1F7,U+F1F9,U+F20A,U+F247-F248,U+F24A,U+F24D,U+F255-F25B,U+F25D,U+F271-F274,U+F278,U+F27B,U+F28C,U+F28E,U+F29C,U+F2B5,U+F2B7,U+F2BA,U+F2BC,U+F2BE,U+F2C0-F2C1,U+F2C3,U+F2D0,U+F2D2,U+F2D4,U+F2DC; }
+
+@font-face {
+    font-family: "FontAwesome";
+    font-display: block;
+    src: url("../webfonts/fa-v4compatibility.woff2") format("woff2"), url("../webfonts/fa-v4compatibility.ttf") format("truetype");
+    unicode-range: U+F041,U+F047,U+F065-F066,U+F07D-F07E,U+F080,U+F08B,U+F08E,U+F090,U+F09A,U+F0AC,U+F0AE,U+F0B2,U+F0D0,U+F0D6,U+F0E4,U+F0EC,U+F10A-F10B,U+F123,U+F13E,U+F148-F149,U+F14C,U+F156,U+F15E,U+F160-F161,U+F163,U+F175-F178,U+F195,U+F1F8,U+F219,U+F250,U+F252,U+F27A; }
 
 .fa-solid, .fa-regular, .fa-light {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: var(--fa-display, inline-block);
-  font-style: normal;
-  font-variant: normal;
-  line-height: 1;
-  text-rendering: auto;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: var(--fa-display, inline-block);
+    font-style: normal;
+    font-variant: normal;
+    line-height: 1;
+    text-rendering: auto;
 }
 
 .fa-solid {
@@ -72,59 +238,59 @@ body {
     content: "\f002"; }
 
 .fa-2x {
-  font-size: 2em; }
+    font-size: 2em; }
 
 .fa-3x {
-  font-size: 3em; }
+    font-size: 3em; }
 
 .fa-ellipsis::before {
-  content: "\f141"; }
+    content: "\f141"; }
 
 .fa-less-than::before {
-  content: "\3c"; }
+    content: "\3c"; }
 
 .fa-save::before {
-  content: "\f0c7"; }
+    content: "\f0c7"; }
 
 .fa-user::before {
-  content: "\f007"; }
+    content: "\f007"; }
 
 .fa-10x {
-  font-size: 10em; }
+    font-size: 10em; }
 
 .fa-phone::before {
-  content: "\f095"; }
+    content: "\f095"; }
 
 .fa-arrow-down::before {
-  content: "\f063"; }
+    content: "\f063"; }
 
 .fa-delete-left::before {
-  content: "\f55a"; }
+    content: "\f55a"; }
 
 .fa-keyboard::before {
-  content: "\f11c"; }
+    content: "\f11c"; }
 
 .fa-address-book::before {
-  content: "\f2b9"; }
+    content: "\f2b9"; }
 
 .fa-star::before {
-  content: "\f005"; }
+    content: "\f005"; }
 
 .fa-regular {
-  font-family: 'Font Awesome 6 Free';
-  font-weight: 400; }
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 400; }
 
 :root, :host {
-  --fa-font-regular: normal 400 1em/1 "Font Awesome 6 Free"; }
+    --fa-font-regular: normal 400 1em/1 "Font Awesome 6 Free"; }
 
 :root, :host {
-  --fa-font-solid: normal 900 1em/1 "Font Awesome 6 Free"; }
+    --fa-font-solid: normal 900 1em/1 "Font Awesome 6 Free"; }
 
 .fa-pen-to-square::before {
-  content: "\f044"; }
+    content: "\f044"; }
 
 .fa-trash::before {
-  content: "\f1f8"; }
+    content: "\f1f8"; }
 
 .fa-arrow-left::before {
-  content: "\f060"; }
+    content: "\f060"; }
