--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     --main-color-light: rgb(255, 255, 255);
     --top-box-shadow: 0px 1px 10px rgb(128 128 128);
     --bottom-box-shadow: 0px -1px 10px rgb(128 128 128);
+    --main-gray-dark: rgb(127, 127, 127);
 }
 
 body {
@@ -102,59 +103,84 @@ button:focus-visible {
     justify-content: center;
     background: var(--main-green-light);
     box-shadow: var(--bottom-box-shadow);
+    transition: all .5s ease-in-out;
 }
 
 /* The Dial Style */
 .dail {
-    height: 0vh;
-    position: relative;
-    top: 100vh;
-    width: 100%;
     display: none;
+    flex-direction: column;
+    width: 100vw;
+    gap: 2.5vh;
+    height: 0;
+    width: 100%;
+    align-items: center;
+    transition: all .5s ease-out;
 }
 
 .dail-up {
     height: 40vh;
-    position: static;
-    display: flex;
-    flex: 1 1 40vh;
-    flex-direction: column;
+    width: 100%;
 }
 
-.dail-value {
+.dail > input {
     height: 7.5vh;
+    width: 99%;
+    border: none;
+    border-top: 2px solid var(--main-gray-dark);
+    border-bottom: 2px solid var(--main-gray-dark);
 }
 
 .dail-buttons {
-    width: 100%;
-    height: 32.5vh;
+    height: 27vh;
+    width: 95%;
     display: grid;
-    gap: 5px;
-    align-content: space-around;
     grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
     grid-template-rows: repeat(5, 1fr);
+    justify-items: center;
+    align-items: center;
+    align-content: center;
 }
 
 .dail-button {
+    background: var(--main-gray-light);
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: var(--main-gray-light);
+    justify-content: center;
+    border-radius: 5px;
+}
+
+.bottom-shadow {
+    box-shadow: var(--bottom-box-shadow);
+}
+
+.transparent {
+    opacity: 0;
 }
 
 .dail-down {
     grid-column: 2;
+    background: var(--main-green-light);
+    border-radius: 100px;
+    height: 30px;
+}
+
+.dail-cancel {
+    height: 25px;
+    width: 25px;
+    border-radius: 13px;
 }
 
 /* The Bottom Bar Of The Main View */
 .bottom-bar {
     width: 100vw;
     height: 10vh;
+    border-top: 1px solid var(--main-gray-dark);
     display: flex;
-    flex: 1 1 1fr;
-    box-shadow: var(--bottom-box-shadow);
+    background: white;
     z-index: 0;
     align-items: center;
 }
@@ -166,6 +192,18 @@ button:focus-visible {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+@keyframes bounceOut {
+    0% {
+        transform: scale(100%);
+    }
+    50% {
+        transform: scale(80%);
+    }
+    100% {
+        transform: scale(100%);
+    }
 }
 
 
